Bug 440740 - Changing any attribute of a brush that uses texture patterns, can cause the brush's pattern to reset to the "01_canvas.png" pattern
Summary: Changing any attribute of a brush that uses texture patterns, can cause the b...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resource Management (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-08 11:12 UTC by fizzyflower
Modified: 2021-08-27 08:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
gif that shows the bug (2.75 MB, image/gif)
2021-08-08 11:12 UTC, fizzyflower
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fizzyflower 2021-08-08 11:12:58 UTC
Created attachment 140587 [details]
gif that shows the bug

SUMMARY

When an attribute is changed on a brush that uses texture patterns, for example the brush tip size or rotation, the texture pattern can reset to the  "01_canvas.png" pattern. This is also the first pattern indexed in Krita. I don't experience this bug happening with every brush that uses texture patterns. Such as the watercolor brushes or rgba brushes 

With texture brushes affected by this bug, opening the brush editor and opening the pattern selector shows that the "01_canvas.png" pattern is already selected. Even if the brush uses a different pattern by default. If a brush present is cloned from the affected texture brush, the new clone brush will be affected too

It can go away by restarting Krita. But the next time Krita is opened it will come back. 

Before testing this I deleted my resource folder. The brushes I tested were default brushes. The default texture brushes that I observed were affected by this bug were 

1.h)Chalk Details
2.g)Dry Brushing
3.i)wet textured soft
4.k)Blender Textured Soft
5.y)Texture Wood Fiber 

STEPS TO REPRODUCE
1. Select a affected texture brush like "h) Chalk Details"
2. Edit any attribute of the brush in the brush editor

OBSERVED RESULT

The brush will reset to the "01_canvas.png" texture pattern

EXPECTED RESULT
The texture doesn't change unless the user selects a new texture

Experienced this bug in Windows and Linux

SOFTWARE/OS VERSIONS
Windows 10 
Linux 

ADDITIONAL INFORMATION
Tested with krita-nightly-x64-5.0.0-prealpha-0ac7ece6ae and a older Krita nightly from June. Krita 4.4.5 doesn't appear to have this bug.
Comment 1 Halla Rempt 2021-08-27 08:21:54 UTC
Git commit cd9f980c302adcbe537e1cd42f5959c8b98ee946 by Halla Rempt.
Committed on 27/08/2021 at 08:21.
Pushed by rempt into branch 'master'.

Add reconstituted patterns to the memory storage

M  +5    -4    plugins/paintops/libpaintop/kis_linked_pattern_manager.cpp

https://invent.kde.org/graphics/krita/commit/cd9f980c302adcbe537e1cd42f5959c8b98ee946
Comment 2 Halla Rempt 2021-08-27 08:22:48 UTC
Git commit fe71ad7d24940586e6d87fb28f453daeb3b87e53 by Halla Rempt.
Committed on 27/08/2021 at 08:22.
Pushed by rempt into branch 'krita/5.0'.

Add reconstituted patterns to the memory storage
(cherry picked from commit cd9f980c302adcbe537e1cd42f5959c8b98ee946)

M  +5    -4    plugins/paintops/libpaintop/kis_linked_pattern_manager.cpp

https://invent.kde.org/graphics/krita/commit/fe71ad7d24940586e6d87fb28f453daeb3b87e53