Add reconstituted patterns to the memory storage

BUG:440740